# starting-ragchatbot-codebase

./: .gitignore  CLAUDE.md  pyproject.toml  rag_flow_diagram.md
backend/: ai_generator.py  app.py  rag_system.py  search_tools.py
backend/tests/: README.md  __init__.py  conftest.py  test_api_endpoints.py  test_models.py
frontend/: index.html  script.js  style.css
scripts/: README.md  check-all.sh  format.sh  lint.sh  pre-commit.sh
